# aether-mail

./: .dockerignore  .env-template  .env.development  .env.docker  .env.example  .env.production  .gitignore  AGENTS.md  CODE_OF_CONDUCT.md  Cargo.toml  DOCKER-OPTIONS.md  DOCKER-SEPARATED.md  DOCKER.md  Dockerfile  Dockerfile.backend  Dockerfile.dev  Dockerfile.frontend  Makefile  README.env.md  README.environments.md  README.md  README.todo  SECURITY.md  aethermail.yml  biome.json  cargo.toml  deploy-docker.sh  docker-compose.cloud.yml  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.separated.yml  docker-compose.yml  electron-builder.json  entrypoint.sh  eslint.config.js  go.mod  go.sum  index.html  install.bat  install.sh  (+21 more)
api/: Cargo.toml  auth.ts  passport.ts  server.ts  tsconfig.json
api/controllers/: authController.ts  emailController.ts  folderController.ts  mailController.ts
api/middlewares/: authMiddleware.ts  errorMiddleware.ts  jwtAuth.ts  validateMiddleware.ts
api/models/: authModel.ts
api/routes/: auth.Routes.ts  auth.ts  authRoutes.ts  email.Routes.ts  folder.Routes.ts  imap.Routes.ts  imapRoutes.ts  indexRoutes.ts  mailRoutes.ts  smtp.Routes.ts  statusRoutes.ts
api/scripts/: generate-jwt-secret.ts  test-cpanel.ts
api/services/: apiService.ts  authService.ts  emailApiService.ts  mailService.ts  smtpService.ts
api/src/: main.rs  schema.rs  server.ts
api/test-data/: emails.json
api/tests/: auth.test.ts  folder.test.ts
api/types/: csurf.d.ts  express-mongo-sanitize.d.ts  xss-clean.d.ts
api/utils/: config.ts
app/: App.tsx  (+8 more)
(+353 files in other folders)
